bdr.BDR.scala.error
Erreur de compilation :
BDR:20: error: Boolean does not take parameters
 else (litMessage() == "I") {droite(); droite(); avance();}
                            ^